[tool.poetry]
name = "studenting"
version = "0.1.0"
description = ""
authors = ["Vikrant Reddy <vikrantreddy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.3.7"
Pillow = "^9.1.1"
django-markdownx = "^3.0.1"
Django = "^4.0.4"
boto3 = "^1.24.2"
django-storages = "^1.12.3"
django-cors-headers = "^3.13.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
