[tool.poetry]
name = "studenting"
version = "0.1.0"
description = ""
authors = ["Vikrant Reddy <vikrantreddy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.3.7"
Pillow = "^9.1.1"
django-markdownx = "^3.0.1"
Django = "^4.0.4"
boto3 = "^1.24.2"
django-storages = "^1.12.3"
django-cors-headers = "^3.13.0"
django-heroku = "^0.3.1"
whitenoise = "^6.2.0"
django-ckeditor = "^6.4.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
